--- a/WebovaAplikace/appsettings.json
+++ b/WebovaAplikace/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ArchivPoznamekFoltin;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
